test/sema/positive/return4.impala
fn f() -> int {
   return(4)
}
