test/sema/negative/int_literal.impala
fn f() -> bool {
   4
}